===============================================================================
Preliminary notes:
------------------
Mark "o": new feature
Mark "*": bug fixed.
Mark "!": change that can break compatibility with older version of the library
===============================================================================

version 2.03.2, 2012-06-26:
===========================
o [Compilation] Compatibility with OCaml 4

version 2.03.1, 2011-03-24:
===========================
* [Calendar] Fixed bug in Calendar.prev and Fcalendar.prev: mostly raised
  exception Date.Out_of_bounds before.
* [Printer] `Thurday' was printed instead of `Thursday'

version 2.03, 2010-07-05:
=========================
o [Date] new function Date.precise_sub
o [Calendar] new function Calendar.precise_sub
  (from Dario Teixeira's suggestion)
* [Compilation] detect whether native dynlink works
  (prevents compilation bug on Mac OS X)

version 2.02, 2009-12-11:
=========================
o [License] add the usual Ocaml linking exception in the license
o [Calendar] Calendar_sig.Period.to_time is deprecated.
  Replaced by a new function Calendar_sig.Period.safe_to_time
o [Date] Date.Period.nb_days is deprecated.
  Replaced by a new function Date.Period.safe_nb_days
o [Compilation] calendarLib.cmxs provided if ocaml >= 3.11 is installed
  (patch of Mehdi Dogguy)
o [Date] new functions Date.make_year and Date.make_year_month
o [Date] improve memory representation of Date.Period.t
* [Compilation] remove installation of packed *.cmi
* [Compilation] bug fixed under Cygwin
* [Compilation] META files was incorrect, so "ocamlfind ocamlopt" did not work
* [Compilation] file date_sig.mli, time_sig.mli and calendar_sig.mli was not
  properly linked

version 2.01.1, 2009-02-23:
===========================
o [Date] add a missing coercion rule for months
  (e.g. "Date.make 2008 18 1" is now equal to "Date.make 2009 6 1")
* [Date] bug fixed in date arithmetic operations due to the missing above
  feature
